--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
             - /tmp
             - /var/run/postgresql
         volumes:
-            - ${POSTGRES_DATA_PATH}:/var/lib/postgresql/data
+            - db:/var/lib/postgresql/data
         environment:
             # timezone inside container
             - TZ
@@ -54,16 +54,7 @@ services:
         tmpfs:
             - /tmp
         volumes:
-            - ${MATTERMOST_CONFIG_PATH}:/mattermost/config:rw
-            - ${MATTERMOST_DATA_PATH}:/mattermost/data:rw
-            - ${MATTERMOST_LOGS_PATH}:/mattermost/logs:rw
-            - ${MATTERMOST_PLUGINS_PATH}:/mattermost/plugins:rw
-            - ${MATTERMOST_CLIENT_PLUGINS_PATH}:/mattermost/client/plugins:rw
-            - ${MATTERMOST_BLEVE_INDEXES_PATH}:/mattermost/bleve-indexes:rw
-            # When you want to use SSO with GitLab, you have to add the cert pki chain of GitLab inside Alpine
-            # to avoid Token request failed: certificate signed by unknown authority
-            # (link: https://github.com/mattermost/mattermost-server/issues/13059 and https://github.com/mattermost/docker/issues/34)
-            # - ${GITLAB_PKI_CHAIN_PATH}:/etc/ssl/certs/pki_chain.pem:ro
+            - mattermost_data:/mattermost/
         environment:
             # timezone inside container
             - TZ
@@ -107,3 +98,5 @@ services:
 volumes:
     caddy_data:
     caddy_config:
+    mattermost:
+    db:
