--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,23 +113,51 @@ services:
             MONGODB_ADVERTISED_HOSTNAME: ${MONGODB_ADVERTISED_HOSTNAME:-mongodb}
             MONGODB_ENABLE_JOURNAL: ${MONGODB_ENABLE_JOURNAL:-true}
             ALLOW_EMPTY_PASSWORD: ${ALLOW_EMPTY_PASSWORD:-yes}
+        # element:
+        #     image: vectorim/element-web:latest
+        #     restart: unless-stopped
+        #     environment:
+        #         - VIRTUAL_HOST=element.example.com
+        #         - VIRTUAL_PORT=80
+        #     ports:
+        #         - "8008:80"
 
-    website:
-        build: ./website/
-        restart: unless-stopped
-        ports:
-            # - 80
-            - "9000:9000"
-        volumes:
-            - ./website/kirby:/var/www/html/
-            - ./website/config:/var/www/html/kirby/site/config
-            - ./website/php.ini-production:/usr/local/etc/php/php.ini
+        # website:
+        #     build: ./website/
+        #     restart: unless-stopped
+        #     ports:
+        #         # - 80
+        #         - "9000:9000"
+        #     volumes:
+        #         - ./website/kirby:/var/www/html/
+        #         - ./website/config:/var/www/html/kirby/site/config
+        #         - ./website/php.ini-production:/usr/local/etc/php/php.ini
         # env_file:
         #     - ./website/id.env
 
+    ghost:
+        image: ghost:5-alpine
+        env_file: website/.env.ghost
+        container_name: ghost
+        hostname: ghost
+        depends_on:
+            - proxy
+            - database
+        volumes:
+            - ./website/content:/var/lib/ghost/content
+        restart: unless-stopped
+
+    database:
+        image: mysql:8.0
+        restart: unless-stopped
+        env_file: website/.env.database
+        volumes:
+            - db_data:/var/lib/mysql
+
 volumes:
     caddy_data:
-    caddy_config: # mattermost:
+    caddy_config:
+    db_data: # mattermost:
 
     # db:
     mongodb_data: { driver: local }
