--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,38 +20,38 @@ services:
             - caddy_config:/config
             - ./website/content:/usr/share/content
 
-    rocketchat:
-        image: registry.rocket.chat/rocketchat/rocket.chat:${RELEASE:-latest}
-        restart: always
-        environment:
-            MONGO_URL: "${MONGO_URL:-mongodb://${MONGODB_ADVERTISED_HOSTNAME:-mongodb}:${MONGODB_INITIAL_PRIMARY_PORT_NUMBER:-27017}/${MONGODB_DATABASE:-rocketchat}?replicaSet=${MONGODB_REPLICA_SET_NAME:-rs0}}"
-            MONGO_OPLOG_URL: "${MONGO_OPLOG_URL:-mongodb://${MONGODB_ADVERTISED_HOSTNAME:-mongodb}:${MONGODB_INITIAL_PRIMARY_PORT_NUMBER:-27017}/local?replicaSet=${MONGODB_REPLICA_SET_NAME:-rs0}}"
-            ROOT_URL: ${ROOT_URL:-http://localhost:${HOST_PORT:-3000}}
-            PORT: ${PORT:-3000}
-            DEPLOY_METHOD: docker
-            DEPLOY_PLATFORM: ${DEPLOY_PLATFORM:-}
-            REG_TOKEN: ${REG_TOKEN:-}
-        depends_on:
-            - mongodb
-        expose:
-            - ${PORT:-3000}
-        # ports:
-        #     - "${BIND_IP:-0.0.0.0}:${HOST_PORT:-3000}:${PORT:-3000}"
+    # rocketchat:
+    #     image: registry.rocket.chat/rocketchat/rocket.chat:${RELEASE:-latest}
+    #     restart: always
+    #     environment:
+    #         MONGO_URL: "${MONGO_URL:-mongodb://${MONGODB_ADVERTISED_HOSTNAME:-mongodb}:${MONGODB_INITIAL_PRIMARY_PORT_NUMBER:-27017}/${MONGODB_DATABASE:-rocketchat}?replicaSet=${MONGODB_REPLICA_SET_NAME:-rs0}}"
+    #         MONGO_OPLOG_URL: "${MONGO_OPLOG_URL:-mongodb://${MONGODB_ADVERTISED_HOSTNAME:-mongodb}:${MONGODB_INITIAL_PRIMARY_PORT_NUMBER:-27017}/local?replicaSet=${MONGODB_REPLICA_SET_NAME:-rs0}}"
+    #         ROOT_URL: ${ROOT_URL:-http://localhost:${HOST_PORT:-3000}}
+    #         PORT: ${PORT:-3000}
+    #         DEPLOY_METHOD: docker
+    #         DEPLOY_PLATFORM: ${DEPLOY_PLATFORM:-}
+    #         REG_TOKEN: ${REG_TOKEN:-}
+    #     depends_on:
+    #         - mongodb
+    #     expose:
+    #         - ${PORT:-3000}
+    #     # ports:
+    #     #     - "${BIND_IP:-0.0.0.0}:${HOST_PORT:-3000}:${PORT:-3000}"
 
-    mongodb:
-        image: docker.io/bitnami/mongodb:${MONGODB_VERSION:-5.0}
-        restart: always
-        volumes:
-            - mongodb_data:/bitnami/mongodb
-        environment:
-            MONGODB_REPLICA_SET_MODE: primary
-            MONGODB_REPLICA_SET_NAME: ${MONGODB_REPLICA_SET_NAME:-rs0}
-            MONGODB_PORT_NUMBER: ${MONGODB_PORT_NUMBER:-27017}
-            MONGODB_INITIAL_PRIMARY_HOST: ${MONGODB_INITIAL_PRIMARY_HOST:-mongodb}
-            MONGODB_INITIAL_PRIMARY_PORT_NUMBER: ${MONGODB_INITIAL_PRIMARY_PORT_NUMBER:-27017}
-            MONGODB_ADVERTISED_HOSTNAME: ${MONGODB_ADVERTISED_HOSTNAME:-mongodb}
-            MONGODB_ENABLE_JOURNAL: ${MONGODB_ENABLE_JOURNAL:-true}
-            ALLOW_EMPTY_PASSWORD: ${ALLOW_EMPTY_PASSWORD:-yes}
+    # mongodb:
+    #     image: docker.io/bitnami/mongodb:${MONGODB_VERSION:-5.0}
+    #     restart: always
+    #     volumes:
+    #         - mongodb_data:/bitnami/mongodb
+    #     environment:
+    #         MONGODB_REPLICA_SET_MODE: primary
+    #         MONGODB_REPLICA_SET_NAME: ${MONGODB_REPLICA_SET_NAME:-rs0}
+    #         MONGODB_PORT_NUMBER: ${MONGODB_PORT_NUMBER:-27017}
+    #         MONGODB_INITIAL_PRIMARY_HOST: ${MONGODB_INITIAL_PRIMARY_HOST:-mongodb}
+    #         MONGODB_INITIAL_PRIMARY_PORT_NUMBER: ${MONGODB_INITIAL_PRIMARY_PORT_NUMBER:-27017}
+    #         MONGODB_ADVERTISED_HOSTNAME: ${MONGODB_ADVERTISED_HOSTNAME:-mongodb}
+    #         MONGODB_ENABLE_JOURNAL: ${MONGODB_ENABLE_JOURNAL:-true}
+    #         ALLOW_EMPTY_PASSWORD: ${ALLOW_EMPTY_PASSWORD:-yes}
 
     ghost:
         image: ghost:5-alpine
