--- a/Caddyfile
+++ b/Caddyfile
@@ -2,7 +2,7 @@
 	email admin@logi.codes
 }
 
-hammbunt.de {
+www.hammbunt.de, hammbunt.de, www.hamm-bunt.de {
 	redir https://hamm-bunt.de{uri}
 }
 
@@ -25,7 +25,3 @@ hamm-bunt.de {
 
 	file_server
 }
-
-# chat.hamm-bunt.de {
-# 	reverse_proxy rocketchat:3000
-# }
